--- a/Entrega German Koning.ipynb
+++ b/Entrega German Koning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fe4a30b8",
+   "id": "9fd9684a",
    "metadata": {},
    "source": [
     "# Primera entrega\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a8d368b",
+   "id": "ff2703de",
    "metadata": {},
    "source": [
     "## German Koning"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "190bb6df",
+   "id": "a34a506b",
    "metadata": {},
    "source": [
     "### Importamos las librerias necesarias"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dbfd36ad",
+   "id": "3548aa3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db10bade",
+   "id": "1b969c8e",
    "metadata": {},
    "source": [
     "### Importamos los datasets a utilizar"
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "eae0089f",
+   "id": "68da129e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca0c7190",
+   "id": "4aa29caf",
    "metadata": {},
    "source": [
     "## Dataset de Salarios en Data Science"
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26cb514e",
+   "id": "14457705",
    "metadata": {},
    "source": [
     "El dataset proporcionado contiene información sobre empleos y salarios en una variedad de empresas. Consta de 3755 entradas y 11 columnas diferentes. Estas columnas incluyen detalles como años de experiencia laboral, nivel de experiencia, tipo de empleo, título del trabajo, salario, moneda del salario, salario en USD, lugar de residencia del empleado, proporción de trabajo remoto, ubicación de la empresa y tamaño de la empresa.\n",
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "53109a75",
+   "id": "42f303ea",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a1791dd",
+   "id": "cbb447ef",
    "metadata": {},
    "source": [
     "## Dataset Precios inmoviliarios karachi"
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ffdd31c",
+   "id": "856fba9f",
    "metadata": {},
    "source": [
     "El dataset proporcionado contiene información relacionada con propiedades en venta. Está compuesto por 8414 registros y consta de 12 columnas que proporcionan detalles sobre cada propiedad, como el título, el precio, la fecha de publicación, el tipo de propiedad, el número de dormitorios y baños, el área, la ubicación, la descripción, las palabras clave y la URL asociada.\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "feca2255",
+   "id": "d6c04085",
    "metadata": {},
    "outputs": [
     {
@@ -181,16 +181,40 @@
   },
   {
    "cell_type": "markdown",
-   "id": "742a7771",
+   "id": "3707c096",
    "metadata": {},
    "source": [
     "## Dataset sobre Economia de combustible en veiculos"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e8c94095",
+   "metadata": {},
+   "source": [
+    "El dataset que has proporcionado contiene información detallada sobre vehículos, incluyendo diferentes atributos relacionados con su rendimiento y características técnicas. El dataset consta de 82 columnas y alrededor de 46,186 filas. Algunas de las columnas importantes incluyen el año de fabricación del vehículo, el fabricante, el modelo, la eficiencia de combustible en ciudad y carretera, la emisión de dióxido de carbono, el tipo de combustible, la clase de vehículo y muchos otros atributos relevantes.\n",
+    "\n",
+    "Este dataset es una valiosa fuente de información para realizar análisis y extraer conocimientos sobre los vehículos en términos de su rendimiento, emisiones y características técnicas. Ahora, veamos algunas preguntas que podrían ayudarnos a comprender mejor los datos y explorar diferentes aspectos relacionados con los vehículos.\n",
+    "\n",
+    "Preguntas relacionadas con el dataset:\n",
+    "\n",
+    "- ¿Cuál es el número total de registros en el dataset?\n",
+    "- ¿Cuáles son los fabricantes de vehículos más comunes en el dataset?\n",
+    "- ¿Cuál es el rango de años de fabricación de los vehículos incluidos en el dataset?\n",
+    "- ¿Cuál es el modelo de vehículo más común en el dataset?\n",
+    "- ¿Cuál es el consumo de combustible promedio en ciudad (city08) y en carretera (highway08) de los vehículos en el dataset?\n",
+    "- ¿Cuál es la clase de vehículo más común en el dataset?\n",
+    "- ¿Cuál es la emisión de dióxido de carbono (CO2) promedio de los vehículos en el dataset?\n",
+    "- ¿Cuáles son los tipos de combustible utilizados por los vehículos en el dataset?\n",
+    "- ¿Cuántos vehículos en el dataset tienen información registrada sobre el número de cilindros?\n",
+    "- ¿Existen vehículos en el dataset que utilicen sistemas de carga o sobrealimentación (turbocompresores o supercargadores)?\n",
+    "- ¿Cuál es el costo promedio de combustible por año para los vehículos en el dataset?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "90d130d4",
+   "execution_count": 20,
+   "id": "76415396",
    "metadata": {},
    "outputs": [
     {
